--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -4,17 +4,20 @@ cmake_minimum_required(VERSION 3.22.1)
 # Declares the project name.
 project("gbdetects")
 
-# Set the path to the OpenCV SDK module. Since you named your module 'sdk',
-# we use that in the path. This path is relative to this file's location.
+# Set the path to the OpenCV SDK module.
 set(OpenCV_DIR ../../../../sdk/native/jni)
 find_package(OpenCV REQUIRED)
+
+# Find the GLESv2 library
+find_library(GLESv2-lib GLESv2)
 
 # Creates and names our shared library.
 add_library(${CMAKE_PROJECT_NAME} SHARED
         native-lib.cpp)
 
-# Link our library against OpenCV and Android's log library.
+# Link our library against OpenCV, Android's log library, and GLESv2.
 target_link_libraries(${CMAKE_PROJECT_NAME}
         ${OpenCV_LIBS}
+        ${GLESv2-lib}
         android
         log)
